--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <meta-data android:name="com.kakao.sdk.AppKey" android:value="8608b46f57f18825d7a04e6a643145e6"/>
 
     <application
+        android:name=".network.NetworkController"
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
